5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2505.log
== TEST (2019-05-10 13:04:35) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:06:10) 
-- CODE:
from math import *
math.radians(a) = eval((input("insira o angulo, macho: ")))

-- ERROR:
File "XXXX", line 2
    math.radians(a) = eval((input()))
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:06:42) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
a2 = math.radians(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a2 = math.radians(a)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:06:52) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
a2 = math.radians(a)
print(a2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a2 = math.radians(a)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:07:07) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
a2 = radians(a)
print(a2)
-- OUTPUT:
0.027415567780803774
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:07:19) 
-- CODE:
from math import *
radians(a) = eval((input("insira o angulo, macho: ")))
a2 = radians(a)
print(a2)
-- ERROR:
File "XXXX", line 2
    radians(a) = eval((input()))
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:07:30) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
a2 = radians(a)
print(a2)
-- OUTPUT:
0.027415567780803774
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:09:21) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: "))).radians()
b = int(input("insira os k number of the serie: "))
a2 = radians(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = eval((input())).radians()
AttributeError: 'float' object has no attribute 'radians'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:09:31) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: "))).radians()
b = int(input("insira os k number of the serie: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = eval((input())).radians()
AttributeError: 'float' object has no attribute 'radians'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:16:47) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

A = 0.0
cont = 0

while (cont < b)
	A = a - a**cont/factorial(cont)
	cont = cont + 1
print(round(A,10))
-- ERROR:
File "XXXX", line 9
    while (cont < b)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:17:38) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

A = 0.0
cont = 0

while (cont < b):
	A = a - a**cont/factorial(cont)
	cont = cont + 1
print(round(A,10))
-- OUTPUT:
1.3171268189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:19:32) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

A = 0.0
cont = 0

while (cont < b):
	A = A - A**cont/factorial(cont)
	cont = cont + 1
print(round(A,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:21:23) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

A = 0.0
cont = 0

while (cont < b):
	A = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(A,10))
-- OUTPUT:
0.0274155442
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:23:15) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 0

while (cont < a):
	sen = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(A,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(A,10))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:23:23) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 0

while (cont < a):
	sen = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:25:44) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 13:25:58) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(sen,10))
-- EXECUTION TIME:
0.192838
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.0
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
0.0
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:26:10) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a - a**cont/factorial(cont)
	cont = cont + 1
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:26:29) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a2 - a2**cont/factorial(cont)
	cont = cont + 1
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:27:04) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 1
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:27:42) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < a):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:27:57) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < b):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))
-- OUTPUT:
0.0274121335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:29:06) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < b):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))

sen(pi/3)
print(sen(pi/3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    sen(pi/3)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:29:37) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
b = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen = 0.0
cont = 1

while (cont < b):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))


print(sen(pi/3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(sen(pi/3))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:31:07) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
a2 = radians(a)

sen(x) = 0.0
cont = 1

while (cont < k):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))

-- ERROR:
File "XXXX", line 6
    sen(x) = 0.0
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:31:17) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
a2 = radians(a)

series = 0.0
cont = 1

while (cont < k):
	sen = a2 - ((a2**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))

-- OUTPUT:
0.0274121335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:34:49) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
a2 = radians(a)

series = 0.0
cont = 1

while (cont < k):
	series = series - ((series**cont)/factorial(cont))
	cont = cont + 2
print(round(sen,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(sen,10))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:35:04) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
a2 = radians(a)

series = 0.0
cont = 1

while (cont < k):
	series = series - ((series**cont)/factorial(cont))
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:38:40) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

series = radians(a)
cont = 1

while (cont < k):
	series = series - ((series**cont)/factorial(cont))
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:38:52) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

series = radians(a)
cont = 3

while (cont < k):
	series = series - ((series**cont)/factorial(cont))
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
0.0274121335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:39:32) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

series = radians(a)
cont = 3

while (cont < k):
	series = series - ((series**cont)/factorial(cont))
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
0.0274121335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:41:27) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

series = radians(a)
cont = 3

while (cont < k):
	series = series - ((series**cont)/factorial(cont)) * (-1)
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
0.0274190021
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:41:52) 
-- CODE:
from math import *
a = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

series = radians(a)
cont = 3

while (cont < k):
	series = (series - ((series**cont)/factorial(cont))) * (-1)
	cont = cont + 2
print(round(series,10))

-- OUTPUT:
-0.0274121335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:19:25) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + (-1)**n * sen**(2*n+1)/d
	n = n +1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:20:10) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + (-1)**n * sen**(2*n+1)/d
	n = n +1
	
	print(round(soma,10))
-- OUTPUT:
0.0273949619
0.0274155755
0.0274155678
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:20:31) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k+1):
	d = factorial(n)
	soma = sen + (-1)**n * sen**(2*n+1)/d
	n = n +1
	
	print(round(soma,10))
-- OUTPUT:
0.0273949619
0.0274155755
0.0274155678
0.0274155678
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:23:16) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + (-1)**n * sen**(2*n+1)/d
	n = n +1
	print(sen)
	
print(round(soma,10))
-- OUTPUT:
0.027415567780803774
0.027415567780803774
0.027415567780803774
0.027415567780803774
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:24:23) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = sen

while (n < k):
	d = factorial(n)
	soma = soma + (-1)**n * sen**(2*n+1)/d
	n = n +1
	print(sen)
	
print(round(soma,10))
-- OUTPUT:
0.027415567780803774
0.027415567780803774
0.027415567780803774
0.027415567780803774
0.0273949696
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:25:31) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	if(n%2 != 0):
		d = factorial(n)
		soma = sen + (-1)**n * sen**(2*n+1)/d
	
	n = n +1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:28:45) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n +1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:40:28) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen - ((-1)**n * sen**(2*n+1))/d
	n = n +1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:40:52) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n +1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:41:37) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))
sen = radians(angulo)

n = 1
soma = 0

while (n < k):
	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n +1
	
print(round(soma,10))
print(sen + ((-1)**n * sen**(2*n+1))/d)
-- OUTPUT:
0.0274155678
0.027415567780803774
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:50:22) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0
f = 1

while (n < k):
	d = factorial(f)
	soma = sen + ((-1)**f * sen**(2*f+1))/d
	n = n + 1
	f = f + 2
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:54:49) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 0
soma = 0

while (n < k):
	
	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:01:16) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 3
soma = 0

while (n < k):
	
	if(n%2==0):
		y = (-1)**2
		
	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:06:55) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = soma - ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
2.05982e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:07:10) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = sen - ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:11:00) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(-1**2)
print(round(soma,10))
-- OUTPUT:
-1
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:11:13) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(-1**3)
print(round(soma,10))
-- OUTPUT:
-1
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:12:03) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(-1**2)
print(round(soma,10))
-- OUTPUT:
-1
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:12:20) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = sen + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(-1**4)
print(round(soma,10))
-- OUTPUT:
-1
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:15:08) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = radians(angulo)
n = 1
soma = sen

while (n < k):

	d = factorial(n)
	soma = soma + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.0273949696
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:16:15) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

sen = angulo
n = 1
soma = sen

while (n < k):

	d = factorial(n)
	soma = soma + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.9697665568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:17:55) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = angulo + ((-1)**n * sen**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma = angulo + ((-1)**n * sen**(2*n+1))/d
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:18:09) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = 0.0

while (n < k):

	d = factorial(n)
	soma = angulo + ((-1)**n * angulo**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
3.9966670408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:18:58) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 0
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = angulo + ((-1)**(2*n+1) * angulo**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:19:09) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = angulo + ((-1)**(2*n+1) * angulo**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:19:17) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 2
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = angulo + ((-1)**(2*n+1) * angulo**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 17:19:26) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 3
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = angulo + ((-1)**(2*n+1) * angulo**(2*n+1))/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:41:53) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:42:08) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = 0.0

while (n < k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- EXECUTION TIME:
0.128704
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.0
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
0.0
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:43:28) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = angulo

while (n < k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.9190828229
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:43:28) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = angulo

while (n < k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.9190828229
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:43:56) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = angulo

while (n < k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.9190828229
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:44:37) 
-- CODE:
from math import *

angulo = eval((input("insira o angulo, macho: ")))
k = int(input("insira o k number of the serie: "))

n = 1
soma = angulo

while (n <= k):

	d = factorial(2 * n + 1)
	soma = soma + (-1)**(2*n+1) * soma**(2*n+1)/d
	n = n + 1
	
print(round(soma,10))
-- OUTPUT:
0.919082813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:55:49) 
-- CODE:
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < k):
	sen = sen + (-1)**(cont) * (sen**cont*2+1)/factorial(cont*2+1)
	cont = cont+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    angulo = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:56:03) 
-- CODE:
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < k):
	sen = sen + (-1)**(cont) * (sen**cont*2+1)/factorial(cont*2+1)
	cont = cont+1
print(sen)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    angulo = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:56:38) 
-- CODE:
from math import *
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < k):
	sen = sen + (-1)**(cont) * (sen**cont*2+1)/factorial(cont*2+1)
	cont = cont+1
print(sen)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (cont < k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:57:04) 
-- CODE:
from math import *
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < termos):
	sen = sen + (-1)**(cont) * (sen**cont*2+1)/factorial(cont*2+1)
	cont = cont+1
print(sen)

-- OUTPUT:
0.9013034300398157
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:57:57) 
-- CODE:
from math import *
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < termos):
	sen = sen + (-1)**(cont) * (angulo**cont*2+1)/factorial(cont*2+1)
	cont = cont+1
print(sen)

-- OUTPUT:
0.9282874569797243
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:00:06) 
-- CODE:
from math import *
angulo = eval(input("numero: "))
termos = int(input("serie"))

sen = angulo
cont = 1
while (cont < termos):
	sen = sen + (-1)**(cont) * ((angulo**cont*2+1)/factorial(cont*2+1))
	cont = cont+1
print(round(sen,10))

-- OUTPUT:
0.928287457
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:06:18) 
-- CODE:
from math import *

angulo = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos da serie: "))

sen = angulo
cont = 1

while (cont < k):
	sen = sen + (-1)**(cont) * (((angulo**(cont*2+1))) / factorial((cont*2+1)))
	cont = cont + 1
print(round(sen,10))


-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:06:41) 
-- CODE:
from math import *

angulo = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos da serie: "))

sen = angulo
cont = 1

while (cont < k):
	sen = sen + (-1)**(cont) * (((angulo**(cont*2+1))) / factorial((cont*2+1)))
	cont = cont + 1
print(round(sen,10))


-- EXECUTION TIME:
0.150538
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:19:00) 
-- CODE:
from math import *

angulo = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos da serie: "))

sen = angulo
cont = 1

while (cont < k):
	sen = sen + (-1)**(cont) * ((angulo**(cont*2+1))) / factorial((cont*2+1))
	cont = cont + 1
print(round(sen,10))


-- EXECUTION TIME:
0.193942
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
